--- a/public/index.html
+++ b/public/index.html
@@ -2,9 +2,11 @@
 <html>
 <head>
   <!-- set `maximum-scale` for some compatibility issues -->
-  <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, minimum-scale=1, user-scalable=no" />
-  <title>操行分管理系统v0.1</title>
- <link rel="shortcut icon" href="/favicon.ico">
+    <title>操行分管理系统v0.1</title>
+    <meta charset="utf-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, minimum-scale=1, user-scalable=no" />
+    <link rel="shortcut icon" href="/favicon.ico">
   <script src="https://as.alipayobjects.com/g/component/fastclick/1.0.6/fastclick.js"></script>
   <script>
     if ('addEventListener' in document) {
